Java 7 → Java 11 마이그레이션 완료
주요 변경 사항:
- Gradle: 구버전 DSL → 7.6.4 현대화, Gradle Wrapper 추가
- Spring: 3.1.2 → 5.3.39 (ref local 제거, suffix pattern matching 활성화, Servlet 4.0 web.xml)
- Lucene: 4.4.0 → 9.10.0 (RAMDirectory → ByteBuffersDirectory, BooleanQuery.Builder, BoostQuery, LongField 등)
- Jackson: codehaus 1.9 + fasterxml 2.2 혼용 → fasterxml 2.15.4 단일화
- XStream: 1.4.3 → 1.4.20 (allowTypesByWildcard 보안 설정 추가)
- dom4j: 1.6.1 → 2.1.4 (selectNodes 반환 타입 변경 대응)
- Logback/SLF4J: 1.0/1.6 → 1.4/2.0
- Groovy: 2.1.6 → 3.0.22
- Gretty 3.1.3 + Jetty 9.4 내장 서버 추가 (로컬 개발용)
- 단위 테스트 72개 전체 통과 (Lucene 9 토큰/BoostQuery 포맷 변경 반영)
- 마이그레이션 계획 및 후속 과제 문서 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>